# package-extract

./: .aicoe-ci.yaml  .coafile  .coverage  .flake8  .gitignore  .pre-commit-config.yaml  .prow.yaml  .thoth.yaml  .travis.yml  .zuul.yaml  CHANGELOG.md  Dockerfile  Dockerfile-base.fedora  Makefile  OWNERS  Pipfile  README.md  README.rst  build.sh  dependencies.yml  pyproject.toml  requirements.txt  setup.py  thoth-package-extract  thoth-pkgdeps
.git_init/hooks/: pre-commit
docs/source/: conf.py
hack/: install_rpm.sh
openshift/: buildConfig-template.yaml  imageStream-template.yaml  job-template.yaml  pod-template.yaml
test/: __init__.py  case.py  test_cli.py  test_config.py  test_core.py
test/data/pip3/input/: fc26_install_celery.txt  fc26_install_click.txt  fc26_install_daiquiri.txt  fc26_install_flask.txt  fc26_install_pytorch.txt  fc26_install_selinon.txt  fc26_install_tensorflow.txt  fc26_install_tensorflow_gpu.txt
test/data/pip3/output/: fc26_install_celery.txt.json  fc26_install_click.txt.json  fc26_install_daiquiri.txt.json  (+5 more)
test/handlers/: __init__.py  test_base.py  test_dnf.py  test_pip.py  test_pip3.py  test_yum.py
thoth/package_extract/: __init__.py  cli.py  core.py  exceptions.py  image.py  koji.py  rpmlib.py
thoth/package_extract/handlers/: __init__.py  base.py  dnf.py  pip.py  pip3.py  yum.py
thoth_package_extract/: __init__.py  cli.py  core.py  image.py  utils.py
thoth_pkgdeps/: __init__.py  cli.py  core.py  exceptions.py  image.py  utils.py
thoth_pkgdeps/handlers/: __init__.py  base.py  dnf.py  pip3.py  yum.py
(+4 files in other folders)
